# cardboardcompanion-py

./: .gitignore  README.md  pyproject.toml
src/cardboardcompanion/bot/: __init__.py  slash_commands.py
src/cardboardcompanion/bot/cmds/: ping.py
src/cardboardcompanion/cfg/: __init__.py  defaults.py
src/cardboardcompanion/cmd/: __init__.py  bot.py
